Fixed no gap mode page button style bug.

--- a/src/assets/styles/less/pagination.less
+++ b/src/assets/styles/less/pagination.less
@@ -88,7 +88,8 @@
   &.no-gap {
     margin: 0 0 1rem 0;
     .page-item {
-      margin: -1px;
+      margin-left: -1px;
+      margin-right: -1px;
     }
     .no-link {
       margin: -1px 1px;
